deploy/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: news-service
  name: news-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-service
  template:
    metadata:
      labels:
        app: news-service
    spec:
      containers:
        - image: image
          name: news-service
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            limits:
              cpu: '0.2'
              memory: 100M
            requests:
              cpu: '0.1'
              memory: 80M
          ports:
            - containerPort: 8080
              name: http
      imagePullSecrets:
        - name: pull-secret
