deploy/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: news-service
  name: news-service-svc
spec:
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: news-service
