deploy/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: '2022-04-06T13:24:10Z'
  generation: 1
  labels:
    app: news-service
    app.kubernetes.io/instance: news-service
  name: news-service
  namespace: news-service
spec:
  rules:
    - host:
      http:
        paths:
          - backend:
              service:
                name: news-service-svc
                port:
                  number: 8080
            path: /api(/|$)(.*)
            pathType: Prefix
